contact,form,footer

--- a/nona.html
+++ b/nona.html
@@ -95,6 +95,52 @@
           </div>
       </div>
   </section>
+  <!-- Contact Section -->
+  <section id="contact" class="px-12 py-16 bg-gray-100">
+    <div class="space-y-6 text-center">
+        <h2 class="text-3xl font-semibold text-gray-800">Contact Us</h2>
+        <p class="text-lg text-gray-700">We'd love to hear from you! Reach out to us if you have any questions or want to place an order.</p>
+        <form class="max-w-lg mx-auto mt-8 space-y-6">
+            <input type="text" placeholder="Your Name" class="w-full p-4 text-gray-900 placeholder-gray-500 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-500">
+            <input type="email" placeholder="Your Email" class="w-full p-4 text-gray-900 placeholder-gray-500 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-500">
+            <textarea placeholder="Your Message" rows="4" class="w-full p-4 text-gray-900 placeholder-gray-500 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-500"></textarea>
+            <button type="submit" class="w-full py-3 font-semibold text-white uppercase transition-all bg-gray-900 border border-gray-900 rounded-lg hover:bg-gray-800">Send Message</button>
+        </form>
+    </div>
+</section>
+<!-- Order Section -->
+<section id="order" class="px-12 py-16 bg-gray-50">
+<div class="space-y-6 text-center">
+    <h2 class="text-3xl font-semibold text-gray-800">Place Your Order</h2>
+    <p class="text-lg text-gray-700">Fill out the form below to place your order. We'll contact you soon!</p>
+
+    <form class="max-w-lg mx-auto mt-8 space-y-6">
+        <input type="text" placeholder="Your Name" class="w-full p-4 text-gray-900 placeholder-gray-500 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-500">
+        <input type="email" placeholder="Your Email" class="w-full p-4 text-gray-900 placeholder-gray-500 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-500">
+        <select class="w-full p-4 text-gray-900 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-500">
+            <option value="" disabled selected>Select Your Item</option>
+            <option value="Coffee Latte">Coffee Latte - Rp.50.000</option>
+            <option value="Cappuccino">Cappuccino - Rp.50.000</option>
+            <option value="Croissant">Croissant - Rp.50.000</option>
+        </select>
+        <textarea placeholder="Special Requests or Instructions" rows="4" class="w-full p-4 text-gray-900 placeholder-gray-500 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-gray-500"></textarea>
+        <button type="submit" class="w-full py-3 font-semibold text-white uppercase transition-all bg-gray-900 border border-gray-900 rounded-lg hover:bg-gray-800">Place Order</button>
+    </form>
+</div>
+</section>
+
+
+<!-- Footer Section -->
+<footer class="px-12 py-8 bg-white border-t border-gray-200">
+    <div class="text-center text-gray-700">
+        <p>&copy; 2024 . All rights reserved.</p>
+        <div class="mt-6">
+            <a href="#" class="text-gray-600 hover:text-gray-900">Privacy Policy</a>
+        </div>
+    </div>
+</footer>
+
+
   
 </body>
 </html>
