--- a/nona.html
+++ b/nona.html
@@ -26,7 +26,7 @@
 </header>
 <!-- Hero Section -->
     
-<section id="hero" class="relative bg-center bg-cover h-96" style="background-image: url('./image/coffee-shop-interior.jpg');">
+<section id="hero" class="relative bg-center bg-cover h-96" style="background-image: url('./project_nona/coffee-shop-interior.jpg');">
   <div class="absolute inset-0 bg-black opacity-40"></div>
   <div class="absolute inset-0 z-10 flex items-center justify-center px-4 text-center">
       <div class="space-y-8 text-white">
@@ -52,42 +52,42 @@
           <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
               <!-- Coffee Latte Item -->
               <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
-                  <img src="./image/coffee-latte.jpg" alt="Coffee Latte" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <img src="./project_nona/coffee-latte.jpg" alt="Coffee Latte" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
                   <h3 class="mt-4 text-xl font-semibold text-gray-800">Coffee Latte</h3>
                   <p class="mt-2 text-gray-600">A rich and smooth espresso with steamed milk, perfect for any time of the day.</p>
                   <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
               </div>
               <!-- Cappuccino Item -->
               <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
-                  <img src="./image/coffee-cappuccino.jpg" alt="Cappuccino" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <img src="./project_nona/coffee-cappuccino.jpg" alt="Cappuccino" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
                   <h3 class="mt-4 text-xl font-semibold text-gray-800">Cappuccino</h3>
                   <p class="mt-2 text-gray-600">A balanced mix of espresso, steamed milk, and frothy foam.</p>
                   <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
               </div>
               <!-- Croissant Item -->
               <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
-                  <img src="./image/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <img src="./project_nona/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
                   <h3 class="mt-4 text-xl font-semibold text-gray-800">Croissant</h3>
                   <p class="mt-2 text-gray-600">Buttery, flaky, and freshly baked – a perfect snack with your coffee.</p>
                   <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
               </div>
               <!-- Croissant Item -->
               <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
-                  <img src="./image/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <img src="./project_nona/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
                   <h3 class="mt-4 text-xl font-semibold text-gray-800">Croissant</h3>
                   <p class="mt-2 text-gray-600">Buttery, flaky, and freshly baked – a perfect snack with your coffee.</p>
                   <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
               </div>
               <!-- Croissant Item -->
               <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
-                  <img src="./image/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <img src="./project_nona/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
                   <h3 class="mt-4 text-xl font-semibold text-gray-800">Croissant</h3>
                   <p class="mt-2 text-gray-600">Buttery, flaky, and freshly baked – a perfect snack with your coffee.</p>
                   <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
               </div>
               <!-- Croissant Item -->
               <div class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
-                  <img src="./image/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
+                  <img src="./project_nona/croissant.jpg" alt="Croissant" class="object-cover w-full h-48 rounded-md sm:h-56 md:h-64 lg:h-72">
                   <h3 class="mt-4 text-xl font-semibold text-gray-800">Croissant</h3>
                   <p class="mt-2 text-gray-600">Buttery, flaky, and freshly baked – a perfect snack with your coffee.</p>
                   <p class="mt-4 text-lg font-semibold text-gray-800">Rp.50.000</p>
