--- a/src/denaldo.html
+++ b/src/denaldo.html
@@ -33,5 +33,67 @@
           </nav>
         </div>
       </div>
+
+      <!-- About  -->
+    <div class="max-w-screen-lg px-3 py-6 mx-auto">
+      <div
+        class="flex flex-col items-center md:flex-row md:justify-between md:gap-x-24"
+      >
+        <div>
+          <h1 class="text-3xl font-bold">
+            Hello, I'm
+            <span
+              class="text-transparent bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text"
+              >Denaldo (Aldo)</span
+            >
+            👋
+          </h1>
+          <p class="mt-6 text-xl leading-9">
+            I'm a passionate in
+            <a
+              class="text-cyan-400 hover:underline"
+              href="FE Development"
+              >Front End Development</a
+            >
+            <!-- -->with 4 years experience as a
+            <a
+              class="text-cyan-400 hover:underline"
+              href="DIT Officer"
+              >Digital IT Officer & Support</a
+            >
+            <!-- -->in energy sector.
+          </p>
+          <div class="flex gap-1 mt-3">
+            <a href="github2"
+              ><img
+                class="w-12 h-12 hover:translate-y-1"
+                src="project_denaldo/github-lg-white.png"
+                alt="Github icon"
+                loading="lazy" /></a
+            ><a href="LinkedIn2"
+              ><img
+                class="w-12 h-12 hover:translate-y-1"
+                src="project_denaldo/linkedin-lg-white.png"
+                alt="Linkedin icon"
+                loading="lazy" /></a
+            >
+           <div class="flex flex-row items-center gap-4">
+            <button class="rounded-lg border-[#FFF] border px-4 py-2 hover:scale-110 transition-transform duration-300">
+              Download CV
+            </button>
+           </div>
+           
+          </div>
+        </div>
+        <div class="shrink-0">
+          <img
+            class="w-60 h-80"
+            src="project_denaldo/Ava.PNG"
+            alt="Avatar image"
+            loading="lazy"
+          />
+        </div>
+      </div>
+    </div>
 </body>
 </html>
