--- a/src/denaldo.html
+++ b/src/denaldo.html
@@ -61,7 +61,7 @@
               href="DIT Officer"
               >Digital IT Officer & Support</a
             >
-            <!-- -->in energy sector.
+            <!-- -->in Energy sector.
           </p>
           <div class="flex gap-1 mt-3">
             <a href="github2"
@@ -95,5 +95,92 @@
         </div>
       </div>
     </div>
+
+        <!-- Project -->
+        <div class="max-w-screen-lg px-3 py-6 mx-auto">
+          <div class="mb-6 text-2xl font-bold">
+            Recent
+            <span
+              class="text-transparent bg-gradient-to-br from-sky-500 to-cyan-400 bg-clip-text"
+              >Projects</span
+            >
+          </div>
+          <div class="flex flex-col gap-6">
+            <div
+              class="flex flex-col items-center p-3 rounded-md gap-x-8 bg-slate-800 md:flex-row"
+            >
+              <div class="shrink-0">
+                <a href="disneyImg"
+                  ><img
+                    class="w-40 h-36 hover:translate-y-1"
+                    src="project_denaldo/dPlus.png"
+                    alt="DisneyPlus"
+                    loading="lazy"
+                /></a>
+              </div>
+              <div>
+                <div class="flex flex-col items-center gap-y-2 md:flex-row">
+                  <a class="hover:text-cyan-400" href="disneyText"
+                    ><div class="text-xl font-semibold">Disney+ Home Screen</div></a
+                  >
+                  <div class="flex gap-2 ml-3">
+                    <div
+                      class="px-2 py-1 text-xs font-semibold rounded-md bg-fuchsia-400 text-fuchsia-900"
+                    >
+                      HTML
+                    </div>
+                    <div
+                      class="px-2 py-1 text-xs font-semibold rounded-md bg-lime-400 text-lime-900"
+                    >
+                      CSS
+                    </div>
+                    
+                  </div>
+                </div>
+                <p class="mt-3 text-gray-400">
+                  Experimenting with creating a home screen
+                </p>
+              </div>
+            </div>
+            <div
+              class="flex flex-col items-center p-3 rounded-md gap-x-8 bg-slate-800 md:flex-row"
+            >
+              <div class="shrink-0">
+                <a href="jagoImage"
+                  ><img
+                    class="w-40 h-36 hover:translate-y-1"
+                    src="project_denaldo/jagos.png"
+                    alt="JagoCoffee"
+                    loading="lazy"
+                /></a>
+              </div>
+              <div>
+                <div class="flex flex-col items-center gap-y-2 md:flex-row">
+                  <a class="hover:text-cyan-400" href="jagoText"
+                    ><div class="text-xl font-semibold">Jago Cofee Website</div></a
+                  >
+                  <div class="flex gap-2 ml-3">
+                    <div
+                      class="px-2 py-1 text-xs font-semibold rounded-md bg-fuchsia-400 text-fuchsia-900"
+                    >
+                      HTML
+                    </div>
+                    <div
+                      class="px-2 py-1 text-xs font-semibold rounded-md bg-lime-400 text-lime-900"
+                    >
+                      CSS
+                    </div>
+                    <div
+                      class="px-2 py-1 text-xs font-semibold text-indigo-900 bg-indigo-400 rounded-md"
+                    >
+                      Tailwind
+                    </div>
+                  </div>
+                </div>
+                <p class="mt-3 text-gray-400">
+                  Create a famous coffee website. Jago coffee
+                </p>
+              </div>
+            </div>
 </body>
 </html>
