mengganti chat ke contact di header pada header di deva.html

--- a/src/deva.html
+++ b/src/deva.html
@@ -30,7 +30,7 @@
             <li class="flex justify-center"><a href="./index.html">Home</a></li>
             <li class="flex justify-center"><a href="./menu.html">Menu</a></li>
             <li class="flex justify-center"><a href="">Galeri</a></li>
-            <li class="flex justify-center"><a href="">Chat</a></li>
+            <li class="flex justify-center"><a href="">Contact</a></li>
           </ul>
         </nav>
 
@@ -55,7 +55,7 @@
           <li class="py-2"><a href="./index.html">Home</a></li>
           <li class="py-2"><a href="./menu.html">Menu</a></li>
           <li class="py-2"><a href="">Galeri</a></li>
-          <li class="py-2"><a href="">Chat</a></li>
+          <li class="py-2"><a href="">Contact</a></li>
         </ul>
       </nav>
     </header>
